# bayker

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  conf.py  index.md  installation.md
docs/api/: index.md  model.md  plot.md  utils.md
docs/tutorials/: getting-started.ipynb
src/bayker/: __init__.py  model.py  plot.py  search.py  utils.py
