[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bayker"
authors = [{ name = "Thomas Vandal", email = "thomas.vandal@umontreal.ca" }]
description = "Bayesian kernel phase modelling"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
  "numpy",
  "simpple",
  "pyyaml",
  "matplotlib",
  # TODO: Release xara on PyPI to be able to depend on it
  "xara @ git+https://github.com/fmartinache/xara",
]

[tool.hatch.version]
source = "vcs"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-parser",
  "myst-nb",
  "sphinx-book-theme",
  "corner",
  "arviz",
  "ultranest",
  "ipywidgets",
]
test = ["pytest"]

[tool.hatch.build.hooks.vcs]
version-file = "src/bayker/_version.py"

[tool.hatch.metadata]
allow-direct-references = true


[project.urls]
"Homepage" = "https://bayker.readthedocs.io"
"Repository" = "https://github.com/vandalt/bayker"
"Bug Tracker" = "https://github.com/vandalt/bayker/issues"
